--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "react-starter",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "private": true,
   "dependencies": {
-    "ans-base-ui": "^0.5.0",
+    "@reduxjs/toolkit": "^1.2.5",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.1",
+    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
-    "language-list": "0.0.3",
-    "languages-list": "^1.0.2",
-    "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
-    "qs": "^6.7.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-icons": "^3.5.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "3.4.0",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
-    "redux-starter-kit": "^0.4.3"
+    "validator": "^12.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,12 +36,6 @@
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "fork-ts-checker-webpack-plugin": "^1.0.0",
-    "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
-    "react-scripts": "^2.1.5"
-  }
+  ]
 }
