--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "redux-saga": "^1.0.2",
     "validator": "^12.2.0"
   },
+  "devDependencies": {
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "dev": "react-scripts start",
