--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "babel-plugin-module-name-mapper": "^1.2.0",
     "chromatic": "^5.3.0",
     "cypress": "^5.6.0",
+    "cypress-terminal-report": "^2.2.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^16.0.1",
     "eslint-formatter-mo": "^1.0.0",
