--- a/.eslintrc
+++ b/.eslintrc
@@ -47,6 +47,8 @@
     "assert": "readonly"
   },
   "rules": {
+    "sonarjs/no-identical-functions": 0,
+    "jest/expect-expect": 0,
     "unicorn/filename-case": 0,
     "unicorn/prevent-abbreviations": 0,
     "xss/no-mixed-html": 2,
